# telecom-genai-platform

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
infrastructure/docker/: Dockerfile.api  Dockerfile.simulator  Dockerfile.worker  prometheus.yml
infrastructure/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
src/agents/: __init__.py  memory.py  reasoning.py
src/api/: models.py  routes.py
src/guardrails/: __init__.py  audit.py  input_filter.py  output_filter.py
src/monitoring/: __init__.py  logging.py
src/rag_pipeline/: __init__.py  chain.py  embeddings.py  hallucination.py  ingest.py  retriever.py
src/tools/: __init__.py  config.py  network.py  registry.py  sla.py  ticketing.py
telecom-genai-platform/: README.md  pyproject.toml
telecom-genai-platform/.github/workflows/: ci-cd.yml
telecom-genai-platform/src/agents/: orchestrator.py
telecom-genai-platform/src/api/: main.py
telecom-genai-platform/src/guardrails/: hallucination.py
telecom-genai-platform/src/monitoring/: metrics.py
tests/: conftest.py  test_agents.py  test_api.py  test_guardrails.py  test_hallucination.py  test_models.py  test_rag_pipeline.py  test_tools.py
